test/log/move/vmv_x_v_u32.txt
vmv_x_v_u32.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vmv_x_v_u32.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vmv_x_v_u32.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vmv_x_v_u32.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vmv_x_v_u32.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vmv_x_v_u32.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vmv_x_v_u32.c:22:6: warning: no previous prototype for 'vmv_x_v_u32_golden' [-Wmissing-prototypes]
   22 | void vmv_x_v_u32_golden(uint32_t *a,uint32_t b,uint32_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~
vmv_x_v_u32.c: In function 'main':
vmv_x_v_u32.c:39:26: error: expected ';' before 'vmv_x_v_u32_golden'
   39 |     b = exp_b = rand()%16 // b and exp_b should be in the range[0,16), 0xffffffff);
      |                          ^
      |                          ;
......
   42 |     vmv_x_v_u32_golden(exp_a,exp_b,exp_result);
      |     ~~~~~~~~~~~~~~~~~~    
vmv_x_v_u32.c:49:22: error: subscripted value is neither array nor pointer nor vector
   49 |         if(exp_result[i] != result[i]) {
      |                      ^
vmv_x_v_u32.c:49:35: error: subscripted value is neither array nor pointer nor vector
   49 |         if(exp_result[i] != result[i]) {
      |                                   ^
vmv_x_v_u32.c:50:79: error: subscripted value is neither array nor pointer nor vector
   50 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                               ^
vmv_x_v_u32.c:50:97: error: subscripted value is neither array nor pointer nor vector
   50 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                                                                 ^
vmv_x_v_u32.c:36:14: warning: variable 'exp_result' set but not used [-Wunused-but-set-variable]
   36 |     uint32_t exp_result;
      |              ^~~~~~~~~~
vmv_x_v_u32.c:35:14: warning: variable 'result' set but not used [-Wunused-but-set-variable]
   35 |     uint32_t result = {0};
      |              ^~~~~~
vmv_x_v_u32.c:32:14: warning: variable 'exp_a' set but not used [-Wunused-but-set-variable]
   32 |     uint32_t exp_a[16];
      |              ^~~~~
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_x_v_u32.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vmv_x_v_u32"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vmv_x_v_u32.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vmv_x_v_u32.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed